<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_fps_sn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/tv_fps_fw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="25dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="25dp" >

            <ImageView
                android:id="@+id/fingerimage"
                android:layout_width="228dp"
                android:layout_height="241dp"
                android:layout_marginRight="50dp"
                android:adjustViewBounds="true"
                android:src="@drawable/nofinger" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/fp_collect_info"
                    android:textColor="#FF000000"
                    android:textSize="20sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:background="#FFDCDCDC" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1" >

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/capture" />

                        <EditText
                            android:id="@+id/captureTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/extract" />

                        <EditText
                            android:id="@+id/extractTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generalize" />

                        <EditText
                            android:id="@+id/generalizeTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/verify" />

                        <EditText
                            android:id="@+id/verifyTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="#FFEEEEEE"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/bt_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/enroll_fp" />

        <Button
            android:id="@+id/bt_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/verify_fp" />

        <Button
            android:id="@+id/bt_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/identify_fp" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/clear_fp_db" />

        <Button
            android:id="@+id/bt_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/show_fp" />
    </LinearLayout>

</LinearLayout>