<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="25dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="25dp"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_format" />

            <EditText
                android:id="@+id/et_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_size" />

            <EditText
                android:id="@+id/et_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_output" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp" >

            <EditText
                android:id="@+id/et_scaninfo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_span="2"
                android:enabled="false"
                android:gravity="top" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="#FFEEEEEE"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/bt_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/scan_barcode" />

        <Button
            android:id="@+id/bt_multi_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/multi_scan" />
    </LinearLayout>

</LinearLayout>