<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_idcard_sn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="25dp" >

        <ImageView
            android:id="@+id/iv_idcard_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nophoto" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/et_idcard_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex" />

                    <EditText
                        android:id="@+id/et_idcard_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nationality" />

                    <EditText
                        android:id="@+id/et_idcard_nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday" />

                    <EditText
                        android:id="@+id/et_idcard_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <EditText
                        android:id="@+id/et_idcard_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number" />

                    <EditText
                        android:id="@+id/et_idcard_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/authority" />

                    <EditText
                        android:id="@+id/et_idcard_authority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/valid_date" />

                    <EditText
                        android:id="@+id/et_idcard_validDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fp_info" />

                    <EditText
                        android:id="@+id/et_idcard_finger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:background="#FFEEEEEE"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/bt_readidcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/read_idcard" />

        <Button
            android:id="@+id/bt_readidcardId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/read_idcard_id" />
    </LinearLayout>

</LinearLayout>